[package]
name = "forticore"
version = "0.1.0"
edition = "2021"
authors = ["FortiCore Team"]
description = "An automated penetration testing tool for security assessments"
license = "MIT"

[[bin]]
name = "fortc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.8"
colored = "3.0.0"
rustscan = "2.4.1"
futures = "0.3"
chrono = "0.4"
regex = "1.10"
thiserror = "2.0.12"
pdf-writer = "0.13.0"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "sqlite",
], optional = true }
rustls = "0.23.26"
rustls-pemfile = "2.2.0"
ring = "0.17"
dirs = "6.0.0"
